# protein-flexibility-platform

./: .gitignore  Untitled-1.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  molstar.css  page.tsx
frontend/app/analyze/: page.tsx
frontend/app/compare/: ComparePageClient.tsx  page.tsx
frontend/components/analysis/: AnalysisProgress.tsx  PDBAnalysis.tsx  ResultDisplay.tsx  StructureComparisonPanel.tsx  UniProtAnalysis.tsx
frontend/components/visualization/: DistanceScorePlot.tsx  FlexScoreChart.tsx  Heatmap.tsx  HeatmapImage.tsx  (+2 more)
frontend/lib/: api.ts
frontend/types/: dsa.ts  index.ts
go-api/: Makefile  go.mod
python-engine/: README.md  pyproject.toml  requirements.txt  run_uniprot_online.py  setup.py  test_integration.py  test_uniprot_analysis.py  test_uniprot_complete.py  test_uniprot_result.json  ubiquitin_uniprot_result.json
python-engine/src/flex_analyzer/: __init__.py  cif_data.py  cis.py  cli.py  core.py  distance.py  dsa.py  heatmap.py  models.py  notebook_dsa_pipeline.py  parser.py  per_residue.py  reference.py  score.py  sequence.py  uniprot_data.py  utils.py
python-engine/src/flex_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python-engine/src/flex_analyzer/data_sources/: __init__.py  uniprot.py
python-engine/src/flex_analyzer/pipelines/: __init__.py  dsa_pipeline.py  uniprot_pipeline.py
python-engine/test_output/: P62988_uniprot_result.json  mock_result.json  pdb_result.json
python-engine/tests/: test_accuracy.py  test_core.py  test_dsa_basic.py
(+26 files in other folders)
